[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
	"dynamic_linking",
	"multi-threaded",
	"bevy_winit",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"default_font"
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
